[project]
name = "mantis"
version = "0.13.5"
description = "An interactive web application to track Mantis Religiosa sightings in Brandenburg."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alabaster==1.0.0",
    "alembic==1.14.0",
    "appdirs==1.4.4",
    "babel==2.16.0",
    "blinker==1.9.0",
    "bpyutils==0.5.8",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "docutils==0.21.2",
    "email-validator>=2.2.0",
    "faker==33.3.1",
    "flask==3.1.0",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "greenlet==3.1.1",
    "gunicorn==23.0.0",
    "idna==3.10",
    "imagesize==1.4.1",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "mako==1.3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "numpy==2.2.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pipdate==0.5.6",
    "pipupgrade==1.12.0",
    "pluggy==1.5.0",
    "psycopg2-binary==2.9.10",
    "pygments==2.19.1",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "setuptools==75.8.0",
    "shapely==2.0.6",
    "six==1.17.0",
    "snowballstemmer==2.2.0",
    "sphinx==8.1.3",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sqlalchemy==2.0.37",
    "svgwrite==1.4.3",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
    "xlsxwriter==3.2.0",
]
