[project]
name = "mantis"
version = "0.13.5"
description = "An interactive web application to track Mantis Religiosa sightings in Brandenburg."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "beautifulsoup4>=4.13.4",
    "blinker>=1.9.0",
    "click>=8.2.1",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-limiter>=3.12",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "geopy>=2.4.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "shapely>=2.1.1",
    "sqlalchemy>=2.0.41",
    "svgwrite>=1.4.3",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "xlsxwriter>=3.2.5",
]

[project.optional-dependencies]
dev = [
    "faker>=37.4.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

docs = [
    "sphinx>=8.2.3",
    "sphinx_rtd_theme>=3.0.0",
    "alabaster>=1.0.0",
    "docutils>=0.21.2",
    "imagesize>=1.4.1",
    "pygments>=2.19.2",
    "snowballstemmer>=3.0.1",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
]
